--- a/public/bridge.html
+++ b/public/bridge.html
@@ -41,9 +41,15 @@
       justify-content: center;
       height: 100vh;
     }
+    .center-top {
+        position: absolute;
+        top: 20px;
+        left: 50%;
+        transform: translateX(-50%);
+    }
   </style>
 </head>
 <body>
-  กำลังเปิดหน้าแนะนำก่อนเข้าหน้าขาย...
+  ก<div class="center-top">กำลังเปิดหน้าแนะนำก่อนเข้าหน้าขาย...</div>
 </body>
 </html>
