--- a/public/sale.html
+++ b/public/sale.html
@@ -32,16 +32,16 @@
     <h1 id="pageTitle"></h1>
 
     <!-- สร้าง 10 ปุ่มล่วงหน้า -->
-    <a href="#" class="img-link" id="link0" target="_blank"><img id="img0" src="" /></a>
-    <a href="#" class="img-link" id="link1" target="_blank"><img id="img1" src="" /></a>
-    <a href="#" class="img-link" id="link2" target="_blank"><img id="img2" src="" /></a>
-    <a href="#" class="img-link" id="link3" target="_blank"><img id="img3" src="" /></a>
-    <a href="#" class="img-link" id="link4" target="_blank"><img id="img4" src="" /></a>
-    <a href="#" class="img-link" id="link5" target="_blank"><img id="img5" src="" /></a>
-    <a href="#" class="img-link" id="link6" target="_blank"><img id="img6" src="" /></a>
-    <a href="#" class="img-link" id="link7" target="_blank"><img id="img7" src="" /></a>
-    <a href="#" class="img-link" id="link8" target="_blank"><img id="img8" src="" /></a>
-    <a href="#" class="img-link" id="link9" target="_blank"><img id="img9" src="" /></a>
+    <a href="#" class="img-link" id="link0" target="_blank"><img id="img0" src="" width="400" height="200" loading="eager" /></a>
+    <a href="#" class="img-link" id="link1" target="_blank"><img id="img1" src="" width="400" height="200" loading="eager" /></a>
+    <a href="#" class="img-link" id="link2" target="_blank"><img id="img2" src="" width="400" height="200" loading="eager" /></a>
+    <a href="#" class="img-link" id="link3" target="_blank"><img id="img3" src="" width="400" height="200" loading="eager" /></a>
+    <a href="#" class="img-link" id="link4" target="_blank"><img id="img4" src="" width="400" height="200" loading="eager" /></a>
+    <a href="#" class="img-link" id="link5" target="_blank"><img id="img5" src="" width="400" height="200" loading="eager" /></a>
+    <a href="#" class="img-link" id="link6" target="_blank"><img id="img6" src="" width="400" height="200" loading="eager" /></a>
+    <a href="#" class="img-link" id="link7" target="_blank"><img id="img7" src="" width="400" height="200" loading="eager" /></a>
+    <a href="#" class="img-link" id="link8" target="_blank"><img id="img8" src="" width="400" height="200" loading="eager" /></a>
+    <a href="#" class="img-link" id="link9" target="_blank"><img id="img9" src="" width="400" height="200" loading="eager" /></a>
   </div>
 
 <script>
@@ -57,7 +57,44 @@
     if (!res.ok) return showError('ไม่พบข้อมูล');
     const item = await res.json();
 
-    // ติดตั้ง Facebook Pixel
+    // ตั้งค่าข้อมูลบนหน้า
+    document.title = item.name || 'Sale Page';
+    document.getElementById('pageTitle').textContent = item.name || slug;
+
+    const imagesArr = item.images || [];
+    const linksArr = item.links || [];
+    const eventsArr = item.events || [];
+
+    // ใส่ลิงก์และภาพล่วงหน้า
+    for (let i = 0; i < 10; i++) {
+      const linkEl = document.getElementById(`link${i}`);
+      const imgEl = document.getElementById(`img${i}`);
+      const src = imagesArr[i] || '';
+      const link = linksArr[i] || '#';
+      const eventName = eventsArr[i] || 'Lead';
+
+      if (src && linkEl && imgEl) {
+        imgEl.src = src;
+        linkEl.href = link;
+        linkEl.onclick = () => {
+          if (typeof fbq === 'function') {
+            fbq('track', eventName);
+          }
+        };
+      } else {
+        if (linkEl) linkEl.style.display = 'none';
+      }
+    }
+
+    // ✅ Preload รูปก่อนติด Pixel
+    await Promise.all(imagesArr.map(src => new Promise(resolve => {
+      const img = new Image();
+      img.onload = resolve;
+      img.onerror = resolve;
+      img.src = src;
+    })));
+
+    // ✅ ค่อยโหลด Facebook Pixel หลังภาพมาแล้ว
     if (item.pixel) {
       const pixelId = String(item.pixel).replace(/[^0-9]/g, '');
 
@@ -82,33 +119,6 @@
       document.body.appendChild(noscript);
     }
 
-    // ตั้งค่าข้อมูลบนหน้า
-    document.title = item.name || 'Sale Page';
-    document.getElementById('pageTitle').textContent = item.name || slug;
-
-    const imagesArr = item.images || [];
-    const linksArr = item.links || [];
-    const eventsArr = item.events || [];
-
-    for (let i = 0; i < 10; i++) {
-      const linkEl = document.getElementById(`link${i}`);
-      const imgEl = document.getElementById(`img${i}`);
-      const src = imagesArr[i] || '';
-      const link = linksArr[i] || '#';
-      const eventName = eventsArr[i] || 'Lead';
-
-      if (src && linkEl && imgEl) {
-        imgEl.src = src;
-        linkEl.href = link;
-        linkEl.onclick = () => {
-          if (typeof fbq === 'function') {
-            fbq('track', eventName);
-          }
-        };
-      } else {
-        if (linkEl) linkEl.style.display = 'none';
-      }
-    }
   } catch (err) {
     showError('เกิดข้อผิดพลาดในการโหลดข้อมูล');
   }
