--- a/public/sale.html
+++ b/public/sale.html
@@ -37,16 +37,16 @@
     <h1 id="pageTitle"></h1>
 
     <!-- สร้าง 10 ปุ่มล่วงหน้า -->
-    <button type="button" class="img-button" id="btn0"><img id="img0" src="" width="400" height="200" loading="eager" /></button>
-    <button type="button" class="img-button" id="btn1"><img id="img1" src="" width="400" height="200" loading="eager" /></button>
-    <button type="button" class="img-button" id="btn2"><img id="img2" src="" width="400" height="200" loading="eager" /></button>
-    <button type="button" class="img-button" id="btn3"><img id="img3" src="" width="400" height="200" loading="eager" /></button>
-    <button type="button" class="img-button" id="btn4"><img id="img4" src="" width="400" height="200" loading="eager" /></button>
-    <button type="button" class="img-button" id="btn5"><img id="img5" src="" width="400" height="200" loading="eager" /></button>
-    <button type="button" class="img-button" id="btn6"><img id="img6" src="" width="400" height="200" loading="eager" /></button>
-    <button type="button" class="img-button" id="btn7"><img id="img7" src="" width="400" height="200" loading="eager" /></button>
-    <button type="button" class="img-button" id="btn8"><img id="img8" src="" width="400" height="200" loading="eager" /></button>
-    <button type="button" class="img-button" id="btn9"><img id="img9" src="" width="400" height="200" loading="eager" /></button>
+    <button type="button" class="img-button" id="btn0"><img id="img0" src="" width="400" height="200" loading="eager" alt="bt0"/></button>
+    <button type="button" class="img-button" id="btn1"><img id="img1" src="" width="400" height="200" loading="eager" alt="bt1"/></button>
+    <button type="button" class="img-button" id="btn2"><img id="img2" src="" width="400" height="200" loading="eager" alt="bt2"/></button>
+    <button type="button" class="img-button" id="btn3"><img id="img3" src="" width="400" height="200" loading="eager" alt="bt3"/></button>
+    <button type="button" class="img-button" id="btn4"><img id="img4" src="" width="400" height="200" loading="eager" alt="bt4"/></button>
+    <button type="button" class="img-button" id="btn5"><img id="img5" src="" width="400" height="200" loading="eager" alt="bt5"/></button>
+    <button type="button" class="img-button" id="btn6"><img id="img6" src="" width="400" height="200" loading="eager" alt="bt6"/></button>
+    <button type="button" class="img-button" id="btn7"><img id="img7" src="" width="400" height="200" loading="eager" alt="bt7"/></button>
+    <button type="button" class="img-button" id="btn8"><img id="img8" src="" width="400" height="200" loading="eager" alt="bt8"/></button>
+    <button type="button" class="img-button" id="btn9"><img id="img9" src="" width="400" height="200" loading="eager" alt="bt9"/></button>
   </div>
 
 <script>
