--- a/public/edit.html
+++ b/public/edit.html
@@ -184,9 +184,21 @@
       const EVENTS = {
         'ผู้สนใจ (Lead)': 'Lead',
         'ดูสินค้า (ViewContent)': 'ViewContent',
-        'ซื้อแล้ว (Purchase)': 'Purchase',
+        'ค้นหา (Search)': 'Search',
+        'ดูหมวดหมู่สินค้า (ViewCategory)': 'ViewCategory',
         'เพิ่มลงตะกร้า (AddToCart)': 'AddToCart',
-        'สมัครรับข้อมูล (Subscribe)': 'Subscribe'
+        'เพิ่มใน Wishlist': 'AddToWishlist',
+        'เริ่มชำระเงิน (InitiateCheckout)': 'InitiateCheckout',
+        'เพิ่มข้อมูลชำระเงิน (AddPaymentInfo)': 'AddPaymentInfo',
+        'ทำการซื้อ (Purchase)': 'Purchase',
+        'ลงทะเบียน (CompleteRegistration)': 'CompleteRegistration',
+        'สมัครรับข้อมูล (Subscribe)': 'Subscribe',
+        'ติดต่อ (Contact)': 'Contact',
+        'บริจาค (Donate)': 'Donate',
+        'ส่งใบสมัคร (SubmitApplication)': 'SubmitApplication',
+        'กำหนดเวลานัด (Schedule)': 'Schedule',
+        'เริ่มทดลองใช้งาน (StartTrial)': 'StartTrial',
+        'สมัครสมาชิก (StartSubscription)': 'StartSubscription'
       };
 
       const eventSelect = document.createElement('select');
