--- a/public/edit.html
+++ b/public/edit.html
@@ -51,9 +51,10 @@
     .preview-img {
       width: 100%;
       border-radius: 6px;
-      margin-bottom: 1rem;
+      margin-bottom: 0.5rem;
       object-fit: cover;
-      height: 120px;
+      height: 80px; /* จาก 120 → 80 */
+      box-shadow: 0 0 4px rgba(0,0,0,0.1);
     }
     .slot .control-group {
       position: absolute;
