--- a/public/edit.html
+++ b/public/edit.html
@@ -11,7 +11,7 @@
     .btn-back{background:#666;color:#fff}
     .btn-save{background:#0f8d3e;color:#fff}
     .btn-preview{background:#007bff;color:#fff}
-    main{padding:1.5rem;max-width:760px;margin:0 auto}
+    main{padding:1.5rem 2rem;max-width:90%;margin:0 auto}
     label{display:block;margin-top:1rem;font-weight:600}
     input[type="text"]{width:100%;padding:.55rem .7rem;border:1px solid #ccc;border-radius:4px}
     #link-group{display:flex;gap:.5rem;align-items:center;margin-top:.4rem}
@@ -81,7 +81,7 @@
       background: #17a2b8;
     }
     form#edit-form {
-      flex: 5;
+      flex: 3;
       min-width: 0;
     }
     #preview-panel {
