--- a/public/edit.html
+++ b/public/edit.html
@@ -87,6 +87,10 @@
     #preview-panel {
       flex: 1;
     }
+    #pdpa-copy {
+      min-width: 100px;
+      flex-shrink: 0;
+    }
 
   </style>
 </head>
